# ga

./: CMakeLists.txt
core/: CMakeLists.txt  coreexport.h  event.cpp  event.h  objectid.cpp  objectid.h  outputstream.cpp  outputstream.h  renderobject.cpp  renderobject.h  renderobject_interface.h  types.h
shapes/: CMakeLists.txt  quad.cpp  quad.h  quad_gl_p.h  quad_interface.h  quadimpl_p.h  shapesexport.h  triangle.cpp  triangle.h  triangle_gl_p.h  triangle_interface.h  triangleimpl_p.h
tests/: CMakeLists.txt  newwindow.cpp
window/: CMakeLists.txt  unixwindow_gl_p.h  window.cpp  window.h  window_interface.h  windowexport.h  windowimpl_p.h
